# livechrg-parsers

./: README.md  pyproject.toml  ruff.toml  run.py  setting.py  settings.py
.github/workflows/: pull-request.yml
src/parsers/charge_point/: functions.py  parser.py
src/parsers/plug_share/: plugshare_parser.py
src/repositories/: charge_point.py  livechrg_api.py  plug_share.py
src/services/: charge_point.py  plug_share.py
src/tasks/: update_stations_by_ids.py
src/utils/: area.py  make_request.py  parse_area.py  setup_logger.py
tests/: conftest.py
tests/data/: charge_point_info.json  plug_share_info.json
tests/tasks/: test_update_stations_by_ids.py
utils/: area.py  base_urls.py  logger.py  make_get_request.py  make_post_request.py  make_request.py  parse_area.py  setup_logger.py
