[tool.poetry]
name = "livechrg-parsers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
apscheduler = "^3.10.4"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest-asyncio = "^0.23.4"
pytest = "^7.4.4"
pytest-httpx = "^0.28.0"
respx = "^0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
